--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <html>
   <head>
     <meta charset="utf-8">
-    <title>My playground landing</title>
+    <title>My play landing</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
